Modifications suggested by FindBugs